# rust-uzi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  lib.rs
src/result/: mod.rs
src/test_case/: mod.rs  test_result.rs
tests/: requests.rs
