[package]
name = "rust_uzi"
description = "A load testing tool for API's made in Rust for measuring Web API's performance. It provides a flexible facility for generating various HTTP workloads."
version = "0.1.0"
edition = "2018"
readme = "README.md"
authors = ["Diego Balmaceda <diego@xaes.dev>"]
repository = "https://github.com/Xaes/rust-uzi"
homepage = "https://github.com/Xaes/rust-uzi"

[lib]
name = "rust_uzi"
path = "./src/lib.rs"
test = true
crate-type = ["lib"]

[dependencies]
hyper = { version = "0.14.13", features = ["full"] }
tokio = { version = "1.12.0", features = ["full"] }

[dev-dependencies]
warp = "0.3.1"
rand = "0.8.4"
futures = "0.3.17"